--- a/css/Package.css
+++ b/css/Package.css
@@ -139,6 +139,8 @@ header {
     display: flex;
     flex-direction: column;
     font-family: "Josefin Sans", sans-serif;
+    margin-top: -160px;
+
 }
 
 .header-left1 {
@@ -157,6 +159,7 @@ header {
 
 .search-box {
     margin-right: 10px; 
+    margin-top: -200px;
 }
 
 .search-box input {
@@ -599,47 +602,42 @@ header {
     cursor: move;               
 }
 
-
-/* Add Button - Country */
-.add-package-btn {
-    text-align: right;
-    margin-top: 0px;
-}
-.add-package-btn button {
-    background: linear-gradient(135deg, #6a11cb, #2575fc);
-    border: none;
-    color: white;
-    width: 30px;
-    height: 30px;
-    font-size: 20px;
-    font-weight: bold;
-    border-radius: 10%;
-    transition: all 0.3s ease;
-    padding: 0;
-    align-items: right;
+/* Add Country form */
+#addCountryForm {
+    display: flex;
+    flex-direction: column;
+    background-color: #FFFFFF;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    max-width: 320px;
 }
 
-.add-package-btn button:hover {
-    background-color: #848687; 
-    transform: scale(1.1); 
+.form-row {
+    display: flex;
+    gap: 10px; 
 }
 
-.add-country-section {
-    display: flex; 
-    align-items: flex-start;
-    gap: 20px; 
+.form-row .form-group {
+    flex: 1;
 }
 
-/* Submit Button Country */
+#addCountryForm .form-group input,
+#addCountryForm .form-group textarea {
+    width: 100%;
+    padding: 6px;
+    font-size: 14px;
+}
+
 #addCountryForm .submit-btn-success {
     width: 100%;
-    padding: 10px;
+    padding: 8px;
     background: linear-gradient(135deg, #6a11cb, #2575fc);
     color: white;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: bold;
     border: none;
-    border-radius: 8px;
+    border-radius: 6px;
     cursor: pointer;
     font-family: "Joti One", serif;
     transition: background-color 0.3s ease;
@@ -647,7 +645,9 @@ header {
 
 #addCountryForm .submit-btn-success:hover {
     background-color: #858585;
-} 
+}
+
+
 
 /* AddCity - form */
 .add-city-container {
@@ -657,7 +657,7 @@ header {
 }
 
 #addCityForm {
-    width: 220px; 
+    width: 250px; 
     background-color: #FFFFFF;
     border-radius: 15px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
