--- a/css/User.css
+++ b/css/User.css
@@ -203,6 +203,6 @@ table th, table td {
 }
 
 table th {
-    background-color: #ffffff76;
-    color: rgb(0, 0, 0);
+    background-color: #000000;
+    color: rgb(255, 255, 255);
 }
