--- a/css/index.css
+++ b/css/index.css
@@ -235,7 +235,7 @@ h1 {
 
 /* Contact CSS */
 #contact {
-    background: linear-gradient(to bottom, #CC7752, #B2A589, #D2B48C, #F4E2D8);
+    background: linear-gradient(to bottom,#CC7752, #e69b7a, #f5b59a, #ffd0bc );
     height: 100vh;
     text-align: center;
     font-family: 'Josefin Sans', sans-serif;
@@ -335,8 +335,8 @@ h1 {
     padding: 10px;
     width: 90%;
     max-width: 400px;
-    margin: 20px 0 0 auto; 
-    text-align: right; 
+    margin: 20px auto; 
+    text-align: center; 
 }
 
 .contact p {
@@ -344,8 +344,8 @@ h1 {
     color: #000000;
     margin: 0;
     display: flex;
-    justify-content: flex-end; 
-    padding-right: 50px; 
+    justify-content: center; 
+    padding: 0; 
 }
 
 .contact-link {
@@ -361,9 +361,9 @@ h1 {
 }
 
 .footer {
-    background: #F4E2D8;
+    background: linear-gradient(to bottom,#ffd0bc,#ffe7dc);
     color: #000000;
-    padding: 10px 0;
+    padding: 5px 0;
     text-align: center;
     font-size: 1.5rem;
     width: 100%;
