--- a/css/Inventory.css
+++ b/css/Inventory.css
@@ -43,10 +43,10 @@ body {
 
 .sidebar ul {
     list-style: none;
-    padding: 10px;
+    padding: 12px;
     margin: 0;
     flex-grow: 1;
-    margin-top: 20px;
+    margin-top: -5px;
 }
 
 .sidebar li {
@@ -157,6 +157,7 @@ header {
     color: #333; 
     font-weight: bold;
     margin-left: 10px;
+    padding-top: 180px;
 }
 
 .logout-link span {
